# opencv_tcp_udp_video_test

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  client.cpp  client1  client1.cpp  client2  client2.cpp  cmake_install.cmake  main  main.cpp  opencv_example  server  server.cpp  server1  server1.cpp  server2  server2.cpp  udp_cli  udp_cli.cpp  udp_srv  udp_srv.cpp  udpsocket.hpp
